syntax = "proto3";

package proto;
option go_package = "pkg/pb";

message HLLCreateRequest {
  bytes key = 1;
  bool sync = 100;
}

message HLLCreateResponse {
  bool success = 1;
}

message HLLDelRequest {
  bytes key = 1;
  bool sync = 100;
}

message HLLDelResponse {
  bool success = 1;
}

message HLLAddRequest {
  bytes key = 1;
  repeated bytes values = 2;
  bool sync = 100;
}

message HLLAddResponse {
  bool success = 1;
}

message HLLCountRequest {
  bytes key = 1;
}

message HLLCountResponse {
  uint32 count = 1;
}